syntax = "proto3";

option csharp_namespace = "Proto.V1";

import "base.proto";

message TaskAssignedProto {
  BaseProto base = 1;
  string publicId = 5;
  string poPugId = 6;
  int32 status = 7;
  int64 time = 8;
}